# genvectorx

./: .gitignore  CMakeLists.txt  README.md  run_benchmarks.sh
benchmarks/: .Boost.cpp.swp  .CMakeLists.txt.swp  Boost.cpp  Boost.cu  BoostCUDA.cu  BoostCUDAStreamed.cu  BoostSYCL.cpp  BoostStreamed.cu  CMakeLists.txt  InvariantMass.cpp  InvariantMass.cu  InvariantMassStreamed.cu  InvariantMasses.cu  InvariantMassesCUDA.cu  InvariantMassesCUDAStreamed.cu  InvariantMassesSYCL.cpp  run_benchmarks.sh
inc/SYCLMath/: AxisAngle.h  Boost.h  BoostX.h  BoostY.h  BoostZ.h  Cartesian2D.h  Cartesian3D.h  Cylindrical3D.h  CylindricalEta3D.h  DisplacementVector2D.h  DisplacementVector3D.h  EulerAngles.h  LinkDef_GenVector.h  LinkDef_GenVector2.h  LinkDef_GenVector32.h  LorentzRotation.h  LorentzVector.h  Plane3D.h  Point2D.h  Point2Dfwd.h  Point3D.h  Point3Dfwd.h  Polar2D.h  Polar3D.h  PositionVector2D.h  PositionVector3D.h  PtEtaPhiE4D.h  PtEtaPhiM4D.h  PxPyPzE4D.h  PxPyPzM4D.h  Quaternion.h  Rotation3D.h  RotationX.h  RotationY.h  RotationZ.h  RotationZYX.h  Transform3D.h  Translation3D.h  VecOps.h  Vector2D.h  (+6 more)
inc/SYCLMath/GenVector/: 3DConversions.h  3DDistances.h  AxisAngle.h  AxisAnglefwd.h  BitReproducible.h  Boost.h  BoostX.h  BoostXfwd.h  BoostY.h  BoostYfwd.h  BoostZ.h  BoostZfwd.h  Boostfwd.h  Cartesian2D.h  Cartesian2Dfwd.h  Cartesian3D.h  Cartesian3Dfwd.h  CoordinateSystemTags.h  Cylindrical3D.h  Cylindrical3Dfwd.h  CylindricalEta3D.h  CylindricalEta3Dfwd.h  DisplacementVector2D.h  DisplacementVector2Dfwd.h  DisplacementVector3D.h  DisplacementVector3Dfwd.h  EulerAngles.h  EulerAnglesfwd.h  GenVectorIO.h  GenVector_exception.h  LorentzRotation.h  LorentzRotationfwd.h  LorentzVector.h  LorentzVectorfwd.h  MathUtil.h  Plane3D.h  Polar2D.h  Polar2Dfwd.h  Polar3D.h  Polar3Dfwd.h  (+30 more)
inc/SYCLMath/GenVector/alpaka/: alpakaVecOps.h  config.h
inc/SYCLMath/GenVector/hip/: hipVecOps.h
plots/: plots.ipynb  plots.py  runtests.sh
src/: 3DConversions.cxx  3DDistances.cxx  AxisAngle.cxx  AxisAngleXother.cxx  BitReproducible.cxx  Boost.cxx  BoostX.cxx  BoostY.cxx  BoostZ.cxx  EulerAngles.cxx  LorentzRotation.cxx  MathUtil.cxx  Quaternion.cxx  QuaternionXaxial.cxx  Rotation3D.cxx  Rotation3DxAxial.cxx  RotationZYX.cxx  VecOps.cxx  VectorUtil.cxx
test/: coordinates3D.cxx
testx/: Boost.cxx  BoostAlpaka.cxx  BoostCUDA.cpp  BoostCUDA.cu  BoostCUDAStreamed.cu  BoostHIP.cxx  BoostHIPStreamed.cxx  BoostSYCL  BoostSYCL.cxx  CMakeLists.txt  ChangeCoord.cxx  ChangeCoordCUDA.cu  ChangeCoordSYCL.cxx  InvariantMasses.cxx  InvariantMassesAlpaka.cxx  InvariantMassesCUDA.cu  InvariantMassesCUDAStreamed.cu  InvariantMassesHIP.cxx  InvariantMassesHIPStreamed.cxx  InvariantMassesSYCL.cxx
